--- a/style.css
+++ b/style.css
@@ -1,95 +1,103 @@
 /* general styling */
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 * {
-    margin: 0;
+  margin: 0;
     padding: 0;
 }
 
 body {
-    font-family: "Poppins", sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
 html {
-    scroll-behavior: smooth;
+  scroll-behavior: smooth;
 }
 
 p {
-    color: rgb(85,85,85);
+  color: rgb(85, 85, 85);
 }
 
 /* transition */
-a, .btn {
-    transition:  all 300ems  ease;
+a,
+.btn {
+  transition: all 300ems ease;
 }
 
 /* desktop nav */
-nav, .nav-links {
-    display: flex;
+nav,
+.nav-links {
+  display: flex;
 }
 
 nav {
-    justify-content: space-around;
+  justify-content: space-around;
     align-items: center;
     /* takes 17% of view height */
     height: 17vh;
 }
+
 .nav-links {
-    gap: 2rem;
+  gap: 2rem;
     list-style: none;
     font-size: 1.5rem;
 }
+
 a {
-    color: cadetblue;
+  color: cadetblue;
     text-decoration: none;
     text-decoration-color: white;
 }
+
 a:hover {
-    color: grey;
+  color: grey;
     text-decoration: underline;
     text-underline-offset: 1rem;
-    text-decoration-color: rgb(181,181,181);
+  text-decoration-color: rgb(181, 181, 181);
 }
+
 /* a:visited {
     color: cadetblue;
     background-color: transparent;
     text-decoration: none;
   } */
 .logo {
-    font-size: 2rem;
+  font-size: 2rem;
 }
 
 .logo:hover {
-    cursor: default;
+  cursor: default;
 }
 
 /* hamburger menu */
 #hamburger-nav {
-    display: none;
+  display: none;
 }
 
-.hamburger-menu{
-    position: relative;
-    display: inline-block;
+.hamburger-menu {
+  position: relative;
+  display: inline-block;
 }
 
-.hamburger-icon{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: 24px;
-    width: 30px;
-    cursor: pointer;
+.hamburger-icon {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 24px;
+  width: 30px;
+  cursor: pointer;
 }
+
 .hamburger-icon span {
-    width: 100%;
+  width: 100%;
     height: 2px;
     background-color: black;
     transition: all 0.3 ease-in-out;
 }
+
 .menu-links {
-    position: absolute;
+  position: absolute;
     top: 100%;
     right: 0;
     background-color: white;
@@ -97,11 +105,10 @@ a:hover {
     max-height: 0;
     overflow: hidden;
     transition: all 0.3 ease-in-out;
-
 }
 
 .menu-links a {
-    display: block;
+  display: block;
     padding: 10px;
     text-align: center;
     font-size: 1.5rem;
@@ -109,38 +116,43 @@ a:hover {
     text-decoration: none;
     transition: all 0.3 ease-in-out;
 }
+
 .menu-links li {
-    list-style: none;
+  list-style: none;
 }
 
 .menu-links.open {
-    max-height: 300px;
+  max-height: 300px;
 }
 
 .hamburger-icon.open span:first-child {
-    transform: rotate(45deg) translate(10px, 5px);
+  transform: rotate(45deg) translate(10px, 5px);
 }
+
 .hamburger-icon.open span:nth-child(2) {
-    opacity: 0;
+  opacity: 0;
 }
+
 .hamburger-icon.open span:last-child {
-    transform: rotate(-45deg) translate(10px, -5px);
+  transform: rotate(-45deg) translate(10px, -5px);
 }
 
 .hamburger-icon span:first-child {
-    transform: none;
+  transform: none;
 }
+
 .hamburger-icon span:first-child {
-    opacity: 1;
+  opacity: 1;
 }
+
 .hamburger-icon span:first-child {
-    transform: none;
+  transform: none;
 }
 
 /* sections */
 
 section {
-    padding-top: 4vh;
+  padding-top: 4vh;
     height: 96vh;
     margin: 0 10rem;
     box-sizing: border-box;
@@ -148,54 +160,56 @@ section {
 }
 
 .section-container {
-    display: flex;
+  display: flex;
 }
 
 /* profile section */
 
 #profile {
-    display: flex;
+  display: flex;
     justify-content: center;
     gap: 5rem;
     height: 80vh;
-
 }
 
 .section__pic-container {
-    display: flex;
+  display: flex;
     height: 400px;
     width: 400px;
     margin: auto 0;
 }
 
 .section__text {
-    align-self: center;
+  align-self: center;
     text-align: center;
 }
 
 .section__text p {
-    font-weight: 600;
+  font-weight: 600;
 }
+
 .section__text__p1 {
-    text-align: center;
+  text-align: center;
 }
 
 .section__text__p2 {
-    font-size: 1.75rem;
+  font-size: 1.75rem;
     margin-bottom: 1rem;
 }
+
 .section__text__p3 {
-    font-size: 0.8rem;
+  font-size: 0.8rem;
     margin-bottom: 1rem;
-    color:cadetblue;
+  color: cadetblue;
 }
 
 .title {
-    font-size: 3rem;
+  font-size: 3rem;
     text-align: center;
 }
+
 #socials-container {
-    display: flex;
+  display: flex;
     justify-content: center;
     margin-top: 1rem;
     gap: 1rem;
@@ -204,20 +218,20 @@ section {
 /* icons */
 
 .icon {
-    cursor: pointer;
-   height: 2rem; 
+  cursor: pointer;
+    height: 2rem;
 }
 
 /* buttons */
 
 .btn-container {
-    display: felx;
+  display: felx;
     justify-content: center;
     gap: 1rem;
 }
 
 .btn {
-    font-weight: 600;
+  font-weight: 600;
     transition: all 300ms ease;
     padding: 1rem;
     width: 8rem;
@@ -226,31 +240,205 @@ section {
 
 .btn-color-1,
 .btn-color-2 {
-    border: rgb(53,53,53) 0.1rem solid;
+  border: rgb(53, 53, 53) 0.1rem solid;
 }
 
 .btn-color-1:hover,
 .btn-color-2:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .btn-color-1,
 .btn-color-2:hover {
-    background: rgb(53,53,53);
+  background: rgb(53, 53, 53);
     color: white;
 }
 
-.btn-color-1:hover{
-    background: rgb(0,0,0);
+.btn-color-1:hover {
+  background: rgb(0, 0, 0);
 }
-.btn-color-2{
-    background: none;
+.btn-color-2 {
+  background: none;
 }
 
-.btn-color-2:hover{
-    border: white 0.1rem solid;
+.btn-color-2:hover {
+  border: white 0.1rem solid;
 }
 
 .btn-container {
-    gap: 1rem;
+  gap: 1rem;
+}
+/* aboout section */
+
+#about {
+  position: relative;
+}
+/* class="about-container" */
+.about-container {
+  gap: 2rem;
+  margin-bottom: 2rem;
+  margin-top: 2rem;
+}
+
+.about-details-container {
+  /* justify-content: center; */
+  flex-direction: column;
+}
+
+.about-container,
+.about-details-container {
+  display: flex
+}
+
+.about-pic {
+  border-radius: 2rem;
+}
+
+.arrow {
+  position: absolute;
+  right: -5rem;
+  bottom: 2.5rem
+}
+
+.details-container {
+  padding: 1.5rem;
+  flex: 1;
+  background: white;
+  border-radius: 2rem;
+  border: rgb(85, 85, 85) 0.1rem solid;
+  border-color: cadetblue;
+  text-align: center;
+}
+
+.section-container {
+  gap: 4rem;
+  height: 80%;
+}
+
+.section__pic-container {
+  height: 400px;
+  width: 400px;
+  margin: auto 0;
+}
+
+/* experienece */
+#experience {
+  position: relative;
+}
+
+.experience-sub-title {
+  color: gray;
+  font-weight: 600;
+  font-size: 1.75rem;
+  margin-bottom: 2rem;
+}
+
+.experience-details-container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.article-container {
+  display: flex;
+  text-align: initial;
+  flex-wrap: wrap;
+  flex-direction: row;
+  gap: 2.5rem;
+  justify-content: space-around;
+}
+
+article {
+  display: flex;
+  width: 10rem;
+  justify-content: space-around;
+  gap: 0.5rem
+}
+
+/* article .icon {} */
+
+/* Projects section */
+
+#projects {
+  position: relative;
+}
+
+.color-container {
+  border-color: cadetblue;
+  background: white;
+
+}
+
+.project-img {
+  border-radius: 2rem;
+  width: 90%;
+  height: 90%;
+}
+
+.project-title {
+  margin: 1rem;
+  color: black;
+}
+
+.project-btn {
+  color: black;
+  border-color: cadetblue;
+}
+
+/* contact page */
+#contact {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  height: 70vh;
+}
+
+.contact-info-upper-container{
+  display: flex;
+  justify-content: center;
+  border-radius: 2rem;
+  border: rgb(53,53,53) 0.1rem solid;
+  border-color: cadetblue;
+  background: white;
+  margin: 2rem auto;
+  padding: 0.5rem;
+}
+
+.contact-info-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
+  margin: 1rem;
+}
+.contact-info-container p{
+  font-size: larger;
+
+}
+.contact-icon {
+  cursor: default;
+  height: 2rem;
+}
+.email-icon {
+  height: 2.5rem;
+}
+
+/* footer */
+footer {
+  height: 26vh;
+  margin: 0 1rem;
+}
+footer p{
+  text-align: center;
+  color: gray; 
+}
+.details-container p {
+  text-align: left;
+}
+.concentration {
+  font-size: 0.8rem;
+}
+.experience-details-container p {
+  font-size: 0.8rem;
+  text-align: center;
 }
